...
class FileManager @Inject constructor(
    private val appContext: Context,
    private val contentResolver: ContentResolver
) : IFileManager {
    companion object {
        const val EXPORT_FOLDER = "exports"
        const val CSV_EXPORT_NAME = "ysnpExport.csv"
        const val YSNP_EXPORT_NAME = "export.ysnp"
        const val AUTHORITY = "fr.jorisfavier.fileprovider"
    }

    override suspend fun saveToCsv(data: String): Uri {
        return withContext(Dispatchers.IO) {
            val exportPath = appContext.getExternalFilesDir(EXPORT_FOLDER)
...
