...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/hide_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/display_all_items"
                android:textAppearance="?textAppearanceBody1" />
...
                style="@style/Widget.YouShallNotPass.SettingsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_password" />

            <TextView
                android:id="@+id/export_items"
                style="@style/Widget.YouShallNotPass.SettingsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_password" />

            <TextView
...
