<resources>
    <string name="no_results_found">No results found.</string>
    <string name="search_placeholder">Search</string>
    <string name="new_string">New</string>
    <string name="item_create_title">New item</string>
    <string name="item_edit_title">Edit item</string>
    <string name="item_name">Name</string>
    <string name="item_login">Login</string>
    <string name="item_password">Password</string>
    <string name="item_create">Create</string>
    <string name="item_update">Update</string>
    <string name="item_generate_password">Generate password</string>
    <string name="authentication_required">Authentication required</string>
    <string name="item_creation_success">New item created. Password added to the clipboard.</string>
    <string name="item_update_success">Item updated</string>
    <string name="item_already_exist">This item already exist, please change the name</string>
    <string name="item_name_or_password_missing">Please give your item a name and a password</string>
    <string name="use_uppercase">Use uppercase</string>
    <string name="use_number">Use number</string>
    <string name="use_symbol">Use symbol</string>
    <string name="password_length">Password length:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete item</string>
    <string name="delete_confirmation">Do you really want to delete this item?</string>
    <string name="copy_password_to_clipboard_success">Password copied</string>
    <string name="copy_login_to_clipboard_success">Login copied</string>
    <string name="delete_success">The item has been successfully deleted</string>
    <string name="error_occurred">An error occurred</string>
    <string name="settings">Settings</string>
    <string name="display_all_items">Hide all items</string>
    <string name="all_items_settings_description">Indicates if all the items should be hidden on the home screen</string>
    <string name="import_password">Import password</string>
    <string name="export_password">Export password</string>
    <string name="app_theme">App theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="battery_saver">Set by Battery Saver</string>
    <string name="system_default">System default</string>
    <string name="export_password_missing">Please provide a password in order to encrypt the file</string>
    <string name="password_export_failed">Oops! An error occurred while exporting your passwords. Please try again.</string>
    <string name="csv_export_explanation">The file exported with this option will generate readable text that could expose your password security</string>
    <string name="ysnp_file">YSNP file</string>
    <string name="ysnp_export_explanation">The file exported with this option will be encrypted and only readable from the YSNP app.</string>
    <string name="export">Export</string>
    <string name="export_in_progress">Export in progress</string>
    <string name="password">Password</string>
    <string name="import_items">Import items</string>
    <string name="import_step1">You can import items from csv and ysnp file.</string>
    <string name="import_step2">We detected an encrypted file please provide us the password to decrypt it.</string>
    <string name="import_step3">Please review the items you want to import.</string>
    <string name="import_completed">Import completed!</string>
    <string name="import_failed">Sorry we were unable to import items from this file.</string>
    <string name="select_file">Select a file to import</string>
    <string name="please_select_file">Please select a file to import</string>
    <string name="please_provide_password">Please provide a password to decrypt the file</string>
    <string name="please_select_item">Please select at least one item to import</string>
    <string name="cancel">Cancel</string>
    <string name="use_the_search">Use the search field above to find items.</string>
    <string name="no_item_yet">You have no item yet, use the button below to add one.</string>
    <string name="about">About this app</string>
    <string name="version">Version</string>
    <string name="auth_fail_try_again">Authentication failed please try again</string>
    <string name="auth_fail_no_biometrics">This app cannot be used without a biometric setup. Please go to your settings to add one.</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="device_not_secure">Your device is not secure!</string>
    <string name="device_not_secure_message">In order to use this application you need to add a lock screen to your device.\nPlease go to Settings > Security > Screen lock to setup one.</string>
    <string name="csv_file">CSV file</string>
    <string name="error_changing_theme">An error occurred while changing the app theme</string>
    <string name="error_no_header_found">No header has been found in this file so we can\'t import items</string>
    <string name="item_found">Items found: %d</string>
    <string name="select_all">Select all</string>
    <string name="delete_all">Delete all items</string>
    <string name="delete_all_confirmation">Do you really want to delete all the items?</string>
    <string name="delete_all_successful">All items have been successfully deleted</string>
    <string name="ysnp_desktop">YouShallNotPass Desktop</string>
    <string name="camera_permission_title">Camera permission</string>
    <string name="camera_permission_explanation">In order to connect your phone and your computer we need to use your camera to scan the YSNP desktop QR code.</string>
    <string name="unable_to_read_qr_code">Unable to read the QR code, please make sure you are scanning the one from the YouShallNotPass desktop app</string>
    <string name="qr_code_success">You are now connected with the YouShallNotPass Desktop app!</string>
    <string name="ysnp_desktop_summary">You can directly send your items to your computer using the YouShallNotPass desktop app: https://github.com/jorisfavier/YouShallNotPass-desktop/releases</string>
    <string name="ysnp_desktop_communication_success">Data successfully sent to the desktop app!</string>
    <string name="ysnp_desktop_communication_fail">We were unable to send your data to the desktop app. Try to sync your mobile and desktop app together and try again.</string>
    <string name="sync_desktop_amd_mobile">Sync with desktop</string>
    <string name="autofill">Autofill</string>
    <string name="autofill_explanation">Fill forms using the YouShallNotPass data</string>
    <string name="search_for_item">Go to the search</string>
    <string name="use_generated_password">Use generated Password</string>
    <string name="create_new_item">Create new item</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="error_desktop_transmission">An error occurred. Are your phone and computer connected to the same wifi?</string>
    <string name="setup_biometric">Setup biometric</string>
    <string name="setup_security">Setup security</string>
    <string name="please_setup_biometric">In order to use this app you need to setup a biometric authentication.</string>
    <string name="register_credentials">Register credentials</string>
    <string name="device_not_compatible">Device not compatible</string>
    <string name="unfortunately_you_cant_use_the_app">Unfortunately your device is not compatible with this app. To properly secure your passwords you need a device allowing biometric authentication.</string>
    <string name="done">Done</string>
</resources>
