<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchResultMainContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_result_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/search_result_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Vente privee" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_result_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_result_item_title"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/search_result_item_login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/item_login"
                    android:textAppearance="?attr/textAppearanceCaption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/search_result_item_login"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintBaseline_toBaselineOf="@id/search_result_item_copy_login_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_result_item_login_title"
                    tools:text="test@google.com" />

                <Button
                    android:id="@+id/search_result_item_login_desktop_button"
                    style="@style/Widget.App.Button.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_computer"
                    app:layout_constraintEnd_toStartOf="@id/search_result_item_copy_login_button"
                    app:layout_constraintTop_toTopOf="@id/search_result_item_copy_login_button" />

                <Button
                    android:id="@+id/search_result_item_copy_login_button"
                    style="@style/Widget.App.Button.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_outline_copy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_result_item_login_title" />

                <TextView
                    android:id="@+id/search_result_item_password_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/item_password"
                    android:textAppearance="?attr/textAppearanceCaption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_result_item_login" />

                <TextView
                    android:id="@+id/search_result_item_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/item_password"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintBaseline_toBaselineOf="@id/search_result_item_copy_password_button"
                    app:layout_constraintEnd_toStartOf="@id/search_result_item_password_desktop_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_result_item_password_title" />

                <Button
                    android:id="@+id/search_result_item_copy_password_button"
                    style="@style/Widget.App.Button.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_outline_copy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_result_item_password_title" />

                <Button
                    android:id="@+id/search_result_item_show_hide_button"
                    style="@style/Widget.App.Button.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_visibility"
                    app:layout_constraintEnd_toStartOf="@id/search_result_item_copy_password_button"
                    app:layout_constraintTop_toTopOf="@id/search_result_item_copy_password_button" />

                <Button
                    android:id="@+id/search_result_item_password_desktop_button"
                    style="@style/Widget.App.Button.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_computer"
                    app:layout_constraintEnd_toStartOf="@id/search_result_item_show_hide_button"
                    app:layout_constraintTop_toTopOf="@id/search_result_item_copy_password_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_result_item_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_result_item_copy_password_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_result_item_delete_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/delete"
                    app:layout_constraintEnd_toStartOf="@id/search_result_item_edit_button"
                    app:layout_constraintTop_toTopOf="@id/search_result_item_edit_button" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
