appId: fr.jorisfavier.youshallnotpass.maestro
---
- launchApp:
    clearState: false
- assertVisible: Maestro 1
- tapOn: Maestro 1
- assertVisible:
    id: search_result_item_login_title
- assertVisible:
    id: search_result_item_login
- assertVisible:
    id: search_result_item_login_desktop_button
- assertVisible:
    id: search_result_item_copy_login_button
- assertVisible:
    id: search_result_item_password_desktop_button
- assertVisible:
    id: search_result_item_show_hide_button
- assertVisible:
    id: search_result_item_copy_password_button
- assertVisible: ••••••••
- tapOn:
    id: search_result_item_show_hide_button
- assertNotVisible: ••••••••
- tapOn:
    id: search_result_item_copy_login_button
- assertVisible:
    id: text_preview
- tapOn:
    id: search_result_item_copy_password_button
- assertVisible:
    id: hidden_preview


