appId: fr.jorisfavier.youshallnotpass.maestro
---
- launchApp:
    clearState: false
- tapOn: NEW
- assertVisible: Use uppercase
- assertVisible: Use number
- assertVisible: Use symbol
- assertVisible: "Password length:"
- tapOn: Name
- inputText: Maestro 2
- tapOn: Login
- inputText: maestro@example.com
- tapOn:
    id: "generate_password_button"
- tapOn: CREATE
- assertVisible: Maestro 2


